Prevent call audience row from being too large

--- a/stylesheets/_call.scss
+++ b/stylesheets/_call.scss
@@ -176,7 +176,8 @@
     }
 
     .f-audience {
-        flex: 1 3 auto;
+        flex: 1 4 auto;
+        max-height: 20em;
         overflow-x: auto;
         overflow-y: hidden;
         display: flex;
